--- a/bites_review_frontend/index.html
+++ b/bites_review_frontend/index.html
@@ -6,8 +6,13 @@
     <script src="index.js" type="text/javascript"></script>
   </head>
   <body>
-    <ul>
+    <h2>Menu Items</h2>
+    <ul id="items-ul">
 
     </ul>
+
+    <section class="item-features">
+
+    </section>
   </body>
 </html>
