Create Nested Comments Routes

--- a/bites_review_frontend/index.html
+++ b/bites_review_frontend/index.html
@@ -4,12 +4,21 @@
     <meta charset="utf-8">
     <title>Bites Review</title>
     <script src="index.js" type="text/javascript"></script>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <h2>Menu Items</h2>
-    <ul id="items-ul">
+    <section>
+      <form id="search">
+        <input type="text" name="search-text" value="" placeholder="Restaurant Name" required autofocus>
+        <input type="submit" value="Search">
+      </form>
+    </section>
 
-    </ul>
+    <section>
+      <h2>Menu Items</h2>
+      <ul id="items-ul">
+      </ul>
+    </section>
 
     <section class="item-features">
 
