Add Search Icon

--- a/bites_review_frontend/index.html
+++ b/bites_review_frontend/index.html
@@ -13,7 +13,9 @@
       <img src="./logo.svg" alt="">
       <form id="search">
         <input type="text" name="search-text" value="" placeholder="Restaurant Name" required autofocus>
-        <input type="submit" value="Search">
+        <button type="submit">
+          <img src="./search.svg" alt="Search">
+        </button>
       </form>
     </section>
 
